# zexe

./: .gitignore  rustfmt.toml
algebra/: Cargo.toml
algebra-benches/: Cargo.toml
algebra-core/: Cargo.toml
algebra-core/algebra-core-derive/: Cargo.toml
algebra-core/src/: lib.rs
algebra-core/src/curves/models/: short_weierstrass_jacobian.rs
algebra-core/src/fields/: mod.rs
algebra-core/src/fields/fp_models/: fp2.rs
algebra/src/: lib.rs
bench-utils/: Cargo.toml
cp-benches/: Cargo.toml
cp-benches/benches/crypto_primitives/: signature.rs
crypto-primitives/: Cargo.toml
crypto-primitives/src/commitment/blake2s/: mod.rs
crypto-primitives/src/crh/pedersen/: constraints.rs
crypto-primitives/src/merkle_tree/: mod.rs
crypto-primitives/src/prf/blake2s/: constraints.rs  mod.rs
crypto-primitives/src/signature/: mod.rs
dpc/: Cargo.toml
dpc/src/: lib.rs
ff-fft/: Cargo.toml
ff-fft/src/: lib.rs
gm17/: Cargo.toml
gm17/src/: lib.rs  r1cs_to_sap.rs
groth16/: Cargo.toml
groth16/src/: lib.rs  r1cs_to_qap.rs
r1cs-core/: Cargo.toml
r1cs-core/src/: lib.rs
r1cs-std/: Cargo.toml
r1cs-std/src/: lib.rs
r1cs-std/src/fields/: fp12.rs  fp2.rs
