[package]
name = "cp-benches"
version = "0.1.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu"
]
description = "A library of cryptographic primitives that are used by Zexe"
homepage = "https://libzexe.org"
repository = "https://github.com/scipr/zexe"
documentation = "https://docs.rs/crypto-primitives/"
keywords = ["r1cs", "groth16", "gm17", "pedersen", "blake2s"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

################################# Dependencies ################################

[dev-dependencies]
algebra = { path = "../algebra", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
criterion = {version ="0.5.1", features = ["html_reports"] }
crypto-primitives = { path = "../crypto-primitives" }
rand = { version = "0.7" }
rand_xorshift = { version = "0.2" }
digest = "0.10.7"

################################# Benchmarks ##################################

[[bench]]
name = "pedersen_crh"
path = "benches/crypto_primitives/crh.rs"
harness = false

[[bench]]
name = "pedersen_comm"
path = "benches/crypto_primitives/comm.rs"
harness = false

[[bench]]
name = "blake2s_prf"
path = "benches/crypto_primitives/prf.rs"
harness = false

[[bench]]
name = "schnorr_sig"
path = "benches/crypto_primitives/signature.rs"
harness = false

[[bench]]
name = "gm17"
path = "benches/crypto_primitives/nizk.rs"
required-features = ["r1cs", "gm17"]
harness = false
